syntax = "proto3";
package data;

option go_package = "distributedJob/internal/rpc/proto;protopb";

service DataService {
  rpc GetTaskHistory(TaskHistoryRequest) returns (TaskHistoryResponse);
  rpc GetStatistics(StatisticsRequest) returns (StatisticsResponse);
}

message TaskHistoryRequest {
  int64 task_id = 1;
  string start_time = 2;
  string end_time = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message TaskRecord {
  int64 id = 1;
  int64 task_id = 2;
  string task_name = 3;
  string execute_time = 4;
  bool success = 5;
  string result = 6;
  string error = 7;
}

message TaskHistoryResponse {
  repeated TaskRecord records = 1;
  int64 total = 2;
  bool success = 3;
}

message StatisticsRequest {
  int64 department_id = 1;
  string period = 2;  // daily, weekly, monthly
}

message StatisticsResponse {
  int32 task_count = 1;
  float success_rate = 2;
  float avg_execution_time = 3;
  map<string, float> execution_stats = 4;
}